--- a/packages/docs/src/content/docs/guides/event-handling.mdx
+++ b/packages/docs/src/content/docs/guides/event-handling.mdx
@@ -155,7 +155,7 @@ el('button').ref(
 )('Submit')
 ```
 
-Without batching, this would trigger three separate re-renders. With `on()`, it's one.
+Without batching, this would trigger three separate updates. With `on()`, it's one.
 
 ### Why Batching Matters
 
@@ -193,125 +193,3 @@ on('click', handler, { once: true })
 // Passive (for scroll performance)
 on('scroll', handler, { passive: true })
 ```
-
----
-
-## When to Use What
-
-**Use props (`onclick`, `oninput`, etc.) when:**
-- Simple, single handler
-- No need for cleanup management
-- Handler updates one signal
-
-**Use `on()` when:**
-- Multiple listeners on one element
-- Handler updates multiple signals (batching)
-- Need explicit cleanup
-- Using event options (capture, passive, once)
-
-Both are valid. Props are simpler; `on()` is more powerful.
-
----
-
-## A Complete Example
-
-A search form with debounced input:
-
-```typescript
-import { compose } from '@rimitive/core';
-import { SignalModule, ComputedModule, EffectModule, BatchModule } from '@rimitive/signals/extend';
-import { createDOMAdapter } from '@rimitive/view/adapters/dom';
-import { createElModule } from '@rimitive/view/el';
-import { createMatchModule } from '@rimitive/view/match';
-import { OnModule } from '@rimitive/view/deps/addEventListener';
-import { MountModule } from '@rimitive/view/deps/mount';
-
-const adapter = createDOMAdapter();
-const svc = compose(
-  SignalModule,
-  ComputedModule,
-  EffectModule,
-  BatchModule,
-  createElModule(adapter),
-  createMatchModule(adapter),
-  OnModule,
-  MountModule
-);
-
-const { el, match, on, signal, computed, effect, mount } = svc;
-
-// State
-const query = signal('');
-const results = signal<string[]>([]);
-const loading = signal(false);
-
-// Debounced search
-let debounceTimer: number;
-const debouncedSearch = (q: string) => {
-  clearTimeout(debounceTimer);
-  if (!q.trim()) {
-    results([]);
-    return;
-  }
-
-  loading(true);
-  debounceTimer = setTimeout(() => {
-    // Simulate API call
-    const mockResults = ['Apple', 'Banana', 'Cherry', 'Date']
-      .filter(item => item.toLowerCase().includes(q.toLowerCase()));
-
-    // Batched update
-    results(mockResults);
-    loading(false);
-  }, 300);
-};
-
-// Watch query changes
-effect(() => {
-  debouncedSearch(query());
-});
-
-// App
-const App = () => el('div').props({ className: 'search-app' })(
-  el('h1')('Search'),
-
-  // Search input
-  el('input')
-    .props({
-      type: 'text',
-      placeholder: 'Type to search...',
-      value: query,
-    })
-    .ref(
-      on('input', (e) => query((e.target as HTMLInputElement).value)),
-      on('keydown', (e) => {
-        if (e.key === 'Escape') query('');
-      })
-    )(),
-
-  // Loading indicator
-  match(loading, (isLoading) =>
-    isLoading ? el('div').props({ className: 'loading' })('Searching...') : null
-  ),
-
-  // Results
-  el('ul')(
-    ...[] // Would use map() here for dynamic results
-  ),
-
-  // Result count
-  el('div').props({ className: 'count' })(
-    computed(() => {
-      const r = results();
-      return r.length === 0
-        ? 'No results'
-        : `${r.length} result${r.length === 1 ? '' : 's'}`;
-    })
-  )
-);
-
-const app = mount(App());
-document.body.appendChild(app.element!);
-```
-
-Event handling, batching, cleanup—all handled. Next: [Loading Data](/guides/loading-data) for async data fetching.
