--- a/packages/docs/src/content/docs/guides/rendering-lists.mdx
+++ b/packages/docs/src/content/docs/guides/rendering-lists.mdx
@@ -87,7 +87,7 @@ const list = el('ul')(
 );
 ```
 
-The key function receives the plain item value and returns a unique identifier. This lets `map()` efficiently update items when the array changes. I tried so hard to get away without using keys but I'm not smart enough so key functions there shall remain.
+The key function receives the plain item value and returns a unique identifier. This lets `map()` efficiently update items when the array changes.
 
 ### Reactive Item Updates
 
